cmake_minimum_required(VERSION 3.1)
project(first_project)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include_directories(include/)
add_library(results/lib/ipb_arithmetic src/subtract.cpp src/sum.cpp)
add_executable(results/bin/ipb_arithmetic src/main.cpp)
target_link_libraries(results/bin/ipb_arithmetic results/lib/ipb_arithmetic)
# target_include_directories(results include)